2006-03-22  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/text/finder.py:
	  Added testing and fixed all errors.

2006-03-22  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/gaupol.desktop:
	  Added Spanish (es) translations from Miguel Latorre.

	* lib/gaupol/base/text/finder.py:
	  New untested finder implementation.

	* lib/gaupol/base/timeframe/calc.py:
	  (TimeFrameCalculator.seconds_to_time): Simplified.

2006-03-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	RELEASE 0.4.0

	* lib/gaupol/__init__.py:
	  Bumped version number to 0.4.0.

2006-03-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/delegates/timeframe.py:
	  Finetuned menu items' tooltips.

2006-03-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/util/config.py:
	  (duration_adjust): Do not shorten durations by default.

2006-03-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* setup.py:
	  Fixed location of README.translators file.

2006-03-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/delegates/timeframe.py:
	  Select changed rows after timing manipulations.

2006-03-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/tfadjust-dialog.glade:
	* data/glade/tfshift-dialog.glade:
	* data/ui/menubar.xml:
	* lib/gaupol/base/delegates/__init__.py:
	* lib/gaupol/base/delegates/action.py:
	* lib/gaupol/base/delegates/edit.py:
	* lib/gaupol/base/delegates/timeframe.py:
	* lib/gaupol/base/files/ass.py:
	* lib/gaupol/base/files/mpl2.py:
	* lib/gaupol/base/files/ssa.py:
	* lib/gaupol/base/files/subviewer2.py:
	* lib/gaupol/base/project.py:
	* lib/gaupol/gtk/delegates/action.py:
	* lib/gaupol/gtk/delegates/filesave.py:
	* lib/gaupol/gtk/delegates/__init__.py:
	* lib/gaupol/gtk/delegates/timeframe.py:
	* lib/gaupol/gtk/dialogs/duradjust.py:
	* lib/gaupol/gtk/dialogs/frconvert.py:
	* lib/gaupol/gtk/dialogs/tfadjust.py:
	* lib/gaupol/gtk/dialogs/tfshift.py:
	* lib/gaupol/gtk/page.py:
	* lib/gaupol/gtk/util/config.py:
	  Renamed timings to timeframes in code.
	  Renamed tmgs to tfs in code.