@@ -1,3 +1,8 @@
+2006-03-23  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
+	* lib/gaupol/base/text/finder.py:
+	  Fixed a docstring.
+
 2006-03-22  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
 	* lib/gaupol/base/text/finder.py:
